# serializer version: 1
# name: test_setcover_reject_other[activationalt]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'Currently does not accept ActivationAlt.',
    ]),
  })
# ---
# name: test_setcover_reject_other[af0em_nohpa]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      '''
        Matrix instructions for half, bf16 (or i8) types are natively accumulated in fp32 (or i32) precision. Please add the following config:
         - HighPrecisionAccumulate: True
      ''',
    ]),
  })
# ---
# name: test_setcover_reject_other[convertafterds]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'one of DataTypeA or DataTypeB need to be float8/float8_fnuz or both are fp32',
    ]),
  })
# ---
# name: test_setcover_reject_other[interleave_alpha]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      "Matrix instruction doesn't support InterleaveAlpha",
    ]),
  })
# ---
# name: test_setcover_reject_other[mbsk_maxviol]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBufferSingleKernel',
    'rejections': list([
      'too many store at MultipleBufferSingleKernel direct reject',
      'MultipleBufferSingleKernel not support UseScaleCD yet',
      'MultipleBufferSingleKernel not support UseE yet',
      'MultipleBufferSingleKernel not support BiasSrc not D yet',
    ]),
  })
# ---
# name: test_setcover_reject_other[nobuf_dtva]
  dict({
    'BufferLoad': False,
    'DirectToVgprA': True,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 1,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'DirectToVgprA requires BufferLoad',
    ]),
  })
# ---
# name: test_setcover_reject_other[nobuf_dtvb]
  dict({
    'BufferLoad': False,
    'DirectToVgprA': False,
    'DirectToVgprB': True,
    'PrefetchGlobalRead': 1,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'DirectToVgprB requires BufferLoad',
    ]),
  })
# ---
# name: test_setcover_reject_other[nobuf_gg]
  dict({
    'BufferLoad': False,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 1,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'BufferLoad=0 does not support GroupedGemm',
    ]),
  })
# ---
# name: test_setcover_reject_other[nobuf_pgr2]
  dict({
    'BufferLoad': False,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'BufferLoad=0 does not support PrefetchGlobalRead>=2',
    ]),
  })
# ---
# name: test_setcover_reject_other[nobuf_sparse]
  dict({
    'BufferLoad': False,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 1,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'BufferLoad=0 does not support Sparse due to VGPR pressure from non-SRD addressing',
    ]),
  })
# ---
# name: test_setcover_reject_other[nobuf_subdword]
  dict({
    'BufferLoad': False,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 1,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'BufferLoad=0 does not support sub-dword data types (flat addressing not validated)',
    ]),
  })
# ---
# name: test_setcover_reject_other[nobuf_usebias]
  dict({
    'BufferLoad': False,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 1,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'BufferLoad=0 does not support UseBias due to no suppress no load.',
    ]),
  })
# ---
# name: test_setcover_reject_other[srmap_sourceswap]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 4,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'SourceSwap not compatible with StoreRemap',
    ]),
  })
# ---
# name: test_setcover_reject_other[ucms_tailloop]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'UseCustomMainLoopSchedule=1 but CMS is not supported',
    ]),
  })
# ---
# name: test_setcover_reject_other[wf32_source]
  dict({
    'BufferLoad': True,
    'DirectToVgprA': False,
    'DirectToVgprB': False,
    'PrefetchGlobalRead': 2,
    'StoreRemapVectorWidth': 0,
    'Valid': False,
    '_GlobalAccumulation': 'MultipleBuffer',
    'rejections': list([
      'WavefrontSize=32 not supported for ISA (9, 4, 2)',
    ]),
  })
# ---
